# live-football-match-analysis-computer-vision

./: README.md  main.py  pyproject.toml  requirements.txt  yolo_interference.py
development_and_analysis/: color_assignment.ipynb
player_ball_assigner/: player_ball_assigner.py
team_assigner/: team_assigner.py
trackers/: tracker.py
trainig_notebook/: football_training_yolov5.ipynb
utils/: bbox_utils.py  video_utils.py
