[project]
name = "soccer-alysis"
version = "0.1.0"
description = "Computer Vision | ML football analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "roboflow>=1.2.11",
    "supervision>=0.26.1",
    "ultralytics>=8.3.218",
]
